# ocdiff

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
python/ocdiff/: __init__.py  __init__.pyi  cli.py  helpers.py  icdiff.py  icdiff_v2.py
src/: lib.rs
tests/: b.json  expected.html  expected_2.html  test_foo.py  test_ocdiff.py  y.json
